# ebpf-nat64

./: .gitignore  Dockerfile  LICENSE  README.md  REUSE.toml  entrypoint.sh  meson.build  meson_options.txt
.github/workflows/: checkpatch.yaml  dockerize-runner.yaml  dockerize-tester.yaml  publish-docker.yaml  test-emulated.yaml
.reuse/: dep5
code_check/: README
docs/: README.md  run_with_container.md  system_description.md  usage_and_test.md
exporter/: exporter.bpf.c  exporter.go  go.mod  go.sum  meson.build
src/: README.md  ebpf_nat64.bpf.c  ebpf_nat64.c  meson.build  nat64_addr_port_assignment.h  nat64_addr_port_manage.c  nat64_checksum.h  nat64_common.h  nat64_conf.c  nat64_conf_opts.c  nat64_ebpf_skel_handler.c  nat64_ipaddr.h  nat64_kern.h  nat64_kern_log.h  nat64_log_common.h  nat64_modify_hdr.h  nat64_print.h  nat64_running_thread.c  nat64_table_tuple.h  nat64_user.h  nat64_user_log.c
src/ebpf_lib/: common_bpf_maps.h  datapath_selection.h  nat64_checksum.h  nat64_exporter.h  nat64_flow_handling.h  nat64_icmp_error_handling.h  nat64_ipv6_addr_check.h  nat64_kern.h  nat64_kern_config.h  nat64_kern_log.h  nat64_modify_hdr.h  nat64_profile.h  nat64_tcp_state_tracking.h  stateful_datapath_funcs.h  stateful_datapath_maps.h  stateless_datapath_funcs.h  stateless_datapath_maps.h
src/include/: nat64_addr_port_assignment.h  nat64_common.h  nat64_exporter_stats.h  nat64_ipaddr.h  nat64_log_common.h  nat64_table_tuple.h
src/include/user_app/: nat64_addr_port_manage.h  nat64_conf.h  nat64_conf_opts.h  nat64_ebpf_skel_handler.h  nat64_running_thread.h  nat64_user.h  nat64_user_log.h
src/test/: ebpf_nat64.test.c  ebpf_nat64_test_func.c  ebpf_nat64_test_func.h  ebpf_nat64_test_icmp6.h  ebpf_nat64_test_peak_udp.h  ebpf_nat64_test_udp_tcp.h
